Fixed spacing on mobile between about and project components

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -79,6 +79,8 @@
       text-align: center;
       margin-top: 50px;
       height: 70vh;
+      margin-bottom: 40px;
+      
     }
 
     .a-left {
